- Added own interval option - Added to save the chosen interval options, so at the next start of the application it sets them automatically.

--- a/SEServerExtender/App.config
+++ b/SEServerExtender/App.config
@@ -1,6 +1,21 @@
 <?xml version="1.0"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SEServerExtender.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
+<userSettings>
+        <SEServerExtender.Properties.Settings>
+                <setting name="Control_AutoIntervalIndex" serializeAs="String">
+                        <value>2</value>
+                </setting>
+                <setting name="Control_AutoIntervalNumeric" serializeAs="String">
+                        <value>30</value>
+                </setting>
+        </SEServerExtender.Properties.Settings>
+    </userSettings>
 </configuration>
