- Allowing to set the interval for the server saves while the server is running. (Time is now in seconds)

--- a/SEServerExtender/SEServerExtender.csproj
+++ b/SEServerExtender/SEServerExtender.csproj
@@ -85,6 +85,8 @@
     <Compile Include="SEServerExtender.Designer.cs">
       <DependentUpon>SEServerExtender.cs</DependentUpon>
     </Compile>
+    <Compile Include="Threads\SaveServer.cs" />
+    <Compile Include="Threads\Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SEModAPIExtensions\SEModAPIExtensions.csproj">
