--- a/SEServerExtender/Properties/Settings.settings
+++ b/SEServerExtender/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="Control_AutoIntervalNumeric" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">30</Value>
     </Setting>
+    <Setting Name="Chat_Auto_Messages" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
