--- a/SEServerExtender/SEServerExtender.csproj
+++ b/SEServerExtender/SEServerExtender.csproj
@@ -71,6 +71,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\Messages.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Messages.Designer.cs">
+      <DependentUpon>Messages.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -86,6 +92,7 @@
       <DependentUpon>SEServerExtender.cs</DependentUpon>
     </Compile>
     <Compile Include="Threads\Chat.cs" />
+    <Compile Include="Threads\ChatAutoMessaging.cs" />
     <Compile Include="Threads\SaveServer.cs" />
     <Compile Include="Threads\Worker.cs" />
   </ItemGroup>
@@ -104,6 +111,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Forms\Messages.resx">
+      <DependentUpon>Messages.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SEServerExtender.resx">
       <DependentUpon>SEServerExtender.cs</DependentUpon>
     </EmbeddedResource>
