--- a/SEServerExtender/SEServerExtender.csproj
+++ b/SEServerExtender/SEServerExtender.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Forms\Messages.Designer.cs">
       <DependentUpon>Messages.cs</DependentUpon>
     </Compile>
+    <Compile Include="InventoryItemDialog.cs" />
+    <Compile Include="InventoryItemDialog.Designer.cs">
+      <DependentUpon>InventoryItemDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -113,6 +117,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Forms\Messages.resx">
       <DependentUpon>Messages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InventoryItemDialog.resx">
+      <DependentUpon>InventoryItemDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SEServerExtender.resx">
       <DependentUpon>SEServerExtender.cs</DependentUpon>
